--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
 @import "tailwindcss";
 
+@theme {
+  --color-primary: #739498;
+  --color-secondary: #bbced0;
+  --color-primaryBg: #5e8085;
+  --color-secondaryBg: #eff7f8;
+  --color-primaryBgHover: #4b6a6f;
+  --color-textLighter: #4b5563;
+  --color-warning: #c76d6d;
+}
+
 @layer base {
   html {
     font-family: "Mulish", sans-serif;
@@ -38,4 +48,8 @@ button {
 ::-webkit-scrollbar-thumb:active {
   box-shadow: inset 0 0 0 12px rgba(0, 0, 0, 0.54);
   border-radius: 12px;
+}
+
+body {
+  overflow: hidden;
 }
