--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,11 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.winning-line {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  background-color: red;
+  transform: translateY(50%);
+}
